--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==2.0.12
 click==8.0.4
 Flask==2.0.3
 Flask-Mail==0.9.1
+gunicorn==20.1.0
 idna==3.3
 itsdangerous==2.1.0
 Jinja2==3.0.3
